chore(/resources): 로컬 환경에서 프로퍼티를 오버라이드하기 위한 설정 추가

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+  config.import: optional:classpath:property-override.yml
   profiles:
     active: local  # Default Active Profile
     group:
