--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -109,7 +109,7 @@ jobs:
 
       # 3. 도커 컨테이너 실행
       - name: docker run new container
-        run: docker run --name momo-api --rm -d -p 80:8080 --volume=$HOME/security:/security:ro ${{ secrets.DOCKERHUB_USERNAME }}/momo-api
+        run: docker run --name momo-api --rm -d -p 80:8080 --volume=$HOME/security:/momo/security:ro ${{ secrets.DOCKERHUB_USERNAME }}/momo-api
 
       # 4. 미사용 이미지를 정리
       - name: delete old docker image
