chore(Dockerfile): 활성화할 프로필을 `SPRING_PROFILE` 환경변수에서 받아오도록 변경

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,10 @@ FROM --platform=linux/arm64 openjdk:17-ea-11
 
 ARG SECURITY_VOLUME=/momo/security
 ENV SECURITY_PATH=$SECURITY_VOLUME
+ENV SPRING_PROFILE=local
 
 COPY build/libs/*.jar /momo/momo-api.jar
-ENTRYPOINT [ "java", "-jar", "/momo/momo-api.jar", \
-    "--spring.profiles.active=dev" ]
+ENTRYPOINT ["java", "-jar", "/momo/momo-api.jar"]
+CMD ["--spring.profiles.active=${SPRING_PROFILE}"]
 
 EXPOSE 8080
