[BE] SpringBoot 프로퍼티 분리, MySQL Server 연결 (#136)
* chore(.gitignore): .gitignore에서 application.yml 제거

* chore: 서브모듈 업데이트 반영

- 테스트 DB 서버 주소, JWT 시크릿 추가

* chore(/resources): 기본 프로퍼티 설정 파일 추가

* chore(/resources): 로컬 환경에서 프로퍼티를 오버라이드하기 위한 설정 추가

* build: 빌드 시 서브모듈에서 yml 파일을 복사해 오는 테스크 삭제

- yml 관리 정책 변경에 따라 yml 내부에서 import 해서 사용하도록 변경

* build: BootJar 생성 시 서브모듈 내의 모든 파일을 제외하도록 설정

* chore: 프로퍼티 프로필, DB 설정 파일 분리

* chore: 테스트 시 실행되는 쿼리 정보를 모두 출력하도록 변경

* build(Dockerfile): 컨테이너에서 dev 프로필을 설정하여 실행하도록 변경

- 컨테이너 내 파일들을 `/momo` 하위에서 관리하도록 변경

* build(backend-cd.yml): 도커 볼륨 변경 반영

* chore(Dockerfile): 활성화할 프로필을 `SPRING_PROFILE` 환경변수에서 받아오도록 변경

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -48,12 +48,5 @@ test {
 }
 
 bootJar {
-    exclude('*.yml')
-}
-
-processResources.dependsOn('copyYML')
-tasks.register('copyYML', Copy) {
-    from 'src/main/resources/security' // 서브 모듈 경로
-    include "*.yml"
-    into 'src/main/resources'
+    exclude('security/**')
 }
