chore: yml 내 cors 설정 등록

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -4,6 +4,7 @@ spring:
     import:
       - ${SECURITY_PATH:classpath:security}/datasource-dev.yml
       - ${SECURITY_PATH:classpath:security}/jwt.yml
+      - ${SECURITY_PATH:classpath:security}/cors.yml
   jpa:
     hibernate:
       ddl-auto: update
