--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -3,6 +3,8 @@ spring:
     activate.on-profile: local
     import:
       - classpath:datasource.yml
+      - classpath:security/cors.yml
+
   jpa:
     hibernate:
       ddl-auto: create
