--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -21,5 +21,5 @@ spring:
 
 security:
   jwt:
-    secret_key: ${random.value}"
-    expiration_period: 3600
+    secret-key: ${random.value}"
+    expiration-period: 1h
