--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -21,5 +21,5 @@ logging:
 
 security:
   jwt:
-    secret_key: ${random.value}"
-    expiration_period: 3600
+    secret-key: ${random.value}"
+    expiration-period: 1h
