[BE] 로그인 정책 추가로 인한 CORS 설정을 수정 (#152)
* chore: yml 내 cors 설정 등록

* refactor: 인증 관련 정보 추가로 인한 CORS 수정

* fix(CorsProperties): 불필요한 Validation 어노테이션 제거

* chore(application.yml) develop 브랜치 최신화에 따른 conflict 해결

* chore: 서브모듈 내 cors 출처 변경

* refactor(CorsProperties): 불필요한 어노테이션 제거

* refactor(CorsProperties): lombok 활용으로 불필요한 코드 삭제

* chore: 서브모듈 변경사항 반영

* refactor(CorsConfig): cors 출처 패턴 형식 입력으로 수정

* chore(application.yml) develop 브랜치 최신화에 따른 conflict 해결

* refactor: `@EnableConfigurationProperties` 오용으로 인한 제거

- Application 단에 `@ConfigurationPropertiesScan` 추가

* fix(MomoApplication): 중복 선언된 어노테이션 제거

* refactor(CorsProperties): `ConfigurationProperties`내 `@Validated` 추가

* chore: 서브모듈 수정사항 반영

* chore: 서브모듈 import문 제거

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -3,6 +3,7 @@ spring:
     activate.on-profile: local
     import:
       - classpath:datasource.yml
+
   jpa:
     hibernate:
       ddl-auto: create
@@ -23,3 +24,5 @@ security:
   jwt:
     secret-key: ${random.value}"
     expiration-period: 1h
+  allow-origins:
+    - http://localhost:[*]
