chore: 쿠키 도메인 설정값 추가(local 프로필)

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -25,4 +25,6 @@ security:
     secret-key: ${random.value}"
     expiration-period: 1h
   allow-origins:
-    - http://localhost:[*]
+      - http://localhost:[*]
+  cookie:
+    domain: "localhost"
