--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -5,6 +5,8 @@ spring:
       - ${SECURITY_PATH:classpath:security}/datasource-dev.yml
       - ${SECURITY_PATH:classpath:security}/jwt.yml
       - ${SECURITY_PATH:classpath:security}/cors.yml
+      - ${SECURITY_PATH:classpath:security}/logback.yml
+
   jpa:
     hibernate:
       ddl-auto: update
