--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "@emotion/react": "11.11.4",
     "@sentry/react": "8.24.0",
     "@sentry/webpack-plugin": "2.21.1",
-    "@tanstack/react-query": "5.51.1",
+    "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-query-devtools": "^5.51.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.24.1"
