--- a/.github/workflows/backend-prod-cd.yml
+++ b/.github/workflows/backend-prod-cd.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/checkout@v4  # Push 이벤트이기 때문에 checkout 해야 함
         with:
-          ref: develop
+          ref: main
           submodules: recursive
           token: ${{ secrets.PAT_TOKEN }}
       - uses: dorny/paths-filter@v3
@@ -49,7 +49,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: develop
+          ref: main
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
