[BE] 운영 환경 추가로 인한 workflow 환경설정 추가 (#231)
* chore: dev 환경 CI/CD 파일명 수정

* chore: prod 환경 CI/CD 파일 추가

* chore: dev workflow 환경설정 오류 수정

* chore: dev workflow 환경설정 오류 추가 수정

* chore: dev-cd 각 이름 내 postfix 추가

* chore: prod-cd 이름 내 postfix 추가

* chore: prod CD 파일 낸 ref 브랜치 수정

--- a/.github/workflows/backend-dev-cd.yml
+++ b/.github/workflows/backend-dev-cd.yml
@@ -1,4 +1,4 @@
-name: Backend CD
+name: Backend Dev CD
 
 on:
   workflow_dispatch:
@@ -13,9 +13,9 @@ jobs:
     outputs:
       backend: ${{ steps.filter.outputs.backend }}
       frontend: ${{ steps.filter.outputs.frontend }}
-      manual: ${{ steps.manualcheck.outputs.manual }}
+      manual: ${{ steps.manual-check.outputs.manual }}
     steps:
-      - id: manualcheck
+      - id: manual-check
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: echo "manual=true" >> "$GITHUB_OUTPUT"
 
@@ -68,7 +68,7 @@ jobs:
 
       # Docker 이미지 빌드
       - name: Docker image build
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/momo-api .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/momo-api-dev .
 
       # DockerHub 로그인
       - name: Docker login
@@ -79,11 +79,11 @@ jobs:
 
       # Docker Hub 이미지 푸시
       - name: Docker Hub push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/momo-api
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/momo-api-dev
 
   be-depoly:
     needs: be-build
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux, ARM64, dev]
     defaults:
       run:
         shell: bash
@@ -101,7 +101,7 @@ jobs:
 
       # 1. 최신 도커 이미지 pull
       - name: docker pull
-        run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/momo-api
+        run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/momo-api-dev
 
       # 2. 기존 컨테이너 중지
       - name: docker stop container
@@ -110,12 +110,12 @@ jobs:
       # 3. 도커 컨테이너 실행
       - name: docker run new container
         run: >-
-          docker run --name momo-api
+          docker run --name momo-api-dev
           --rm -d -p 8080:8080
           --volume=$HOME/security:/momo/security:ro
           --volume=$HOME/logs:/momo/logs
           --env SPRING_PROFILE=dev
-          ${{ secrets.DOCKERHUB_USERNAME }}/momo-api
+          ${{ secrets.DOCKERHUB_USERNAME }}/momo-api-dev
 
       # 4. 미사용 이미지를 정리
       - name: delete old docker image
