fix: 적절한 Self hosted runner를 찾을 수 있도록 태그 추가

--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -76,7 +76,7 @@ jobs:
 
   deploy:
     needs: fe-build
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux, ARM64, dev]
     env:
       CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID}}
     steps:
