--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,9 +1,9 @@
-name: Backend Dev CI
+name: Backend CI
 
 on:
   workflow_dispatch:
   pull_request:
-    branches: ['develop']
+    branches: ['main', 'develop']
 
 permissions:
   checks: write
