--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'com.auth0:java-jwt:4.4.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
