--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -6,6 +6,7 @@ spring:
       - ${SECURITY_PATH:classpath:security}/jwt.yml
       - ${SECURITY_PATH:classpath:security}/cors.yml
       - ${SECURITY_PATH:classpath:security}/logback.yml
+      - ${SECURITY_PATH:classpath:security}/actuator.yml
 
   jpa:
     hibernate:
