--- a/.github/workflows/frontend-prod-cd.yml
+++ b/.github/workflows/frontend-prod-cd.yml
@@ -1,8 +1,9 @@
-name: 모모 프론트엔드 배포 자동화 워크플로우
+name: 모모 프론트엔드 배포 자동화 워크플로우(prod)
 
 on:
+  workflow_dispatch:
   push:
-    branches: ["develop"]
+    tags: release-**
 
 permissions:
   checks: write
@@ -18,11 +19,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4 # Push 이벤트이기 때문에 checkout 해야 함
         with:
-          ref: develop
+          ref: main
       - uses: dorny/paths-filter@v3
         id: filter
         with:
-          base: "develop" # 해당 브랜치의 last commit과 변경점 비교
+          base: "main" # 해당 브랜치의 last commit과 변경점 비교
           filters: |
             backend:
               - 'backend/**'
@@ -63,10 +64,10 @@ jobs:
 
       - name: .env 파일을 생성해요 :)
         run: |
-          echo "${{ secrets.MOMO_FE_ENV }}" >> .env
+          echo "${{ secrets.MOMO_FE_ENV_PROD }}" >> .env
 
       - name: 프론트엔드 리소스를 빌드해요 :)
-        run: npm run build
+        run: npm run build:prod
 
       - name: 프론트엔드 리소스 결과물을 깃허브 레파지토리 artifacts로 업로드해요
         uses: actions/upload-artifact@v4
@@ -78,7 +79,7 @@ jobs:
     needs: fe-build
     runs-on: [self-hosted, linux, ARM64, dev]
     env:
-      CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID}}
+      CLOUDFRONT_DISTRIBUTION_ID_PROD: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID_PROD}}
     steps:
       - name: 모모 깃허브 레파지토리 artifacts로 부터 빌드 결과물을 다운받아요 :)
         uses: actions/download-artifact@v4
@@ -89,4 +90,4 @@ jobs:
         working-directory: ./frontend/dist/
         run: |
           aws s3 sync ./ s3://techcourse-project-2024/momo --delete
-          aws cloudfront create-invalidation --distribution-id "$CLOUDFRONT_DISTRIBUTION_ID" --paths "/*"
+          aws cloudfront create-invalidation --distribution-id "$CLOUDFRONT_DISTRIBUTION_ID_PROD" --paths "/*"
