--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "prod": "webpack server --open --config webpack.prod.js",
     "dev": "webpack server --open --config webpack.dev.js",
-    "build:prod": "NODE_ENV=production webpack --config webpack.prod.js && npm run sentry:sourcemaps",
-    "build:dev": "NODE_ENV=development webpack --config webpack.dev.js",
+    "build:prod": "cross-env REACT_APP_ENABLE_MSW=false NODE_ENV=production webpack --config webpack.prod.js && npm run sentry:sourcemaps",
+    "build:dev": "cross-env REACT_APP_ENABLE_MSW=false NODE_ENV=development webpack --config webpack.dev.js",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject ./dist && sentry-cli sourcemaps upload -o momo2024 -p momo-harry-test /dist",
     "lint:css": "stylelint '**/*.styles.ts' --fix",
     "test": "jest",
