chore: dev모드 빌드 시 production모드로 빌드하도록 수정

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "prod": "webpack server --open --config webpack.prod.js",
     "dev": "webpack server --open --config webpack.dev.js",
     "build:prod": "NODE_ENV=production webpack --config webpack.prod.js && npm run sentry:sourcemaps",
-    "build:dev": "NODE_ENV=development webpack --config webpack.dev.js",
+    "build:dev": "NODE_ENV=production webpack --config webpack.prod.js",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject ./dist && sentry-cli sourcemaps upload -o momo2024 -p momo-harry-test /dist",
     "lint:css": "stylelint '**/*.styles.ts' --fix",
     "test": "jest",
