--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-typescript": "7.24.7",
     "@chromatic-com/storybook": "1.6.1",
     "@emotion/babel-plugin": "11.11.0",
+    "@hyunbinseo/holidays-kr": "3.2025.1",
     "@storybook/addon-essentials": "8.2.4",
     "@storybook/addon-interactions": "8.2.4",
     "@storybook/addon-links": "8.2.4",
