--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "@typescript-eslint/eslint-plugin": "7.16.0",
     "@typescript-eslint/parser": "7.16.0",
     "babel-loader": "9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "dotenv-webpack": "8.1.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jsx-a11y": "6.9.0",
