--- a/frontend/package.json
+++ b/frontend/package.json
@@ -89,6 +89,7 @@
     "typescript": "5.5.3",
     "undici": "6.19.2",
     "webpack": "5.94.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.0.4",
     "webpack-merge": "6.0.1"
