--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,6 +79,7 @@
     "msw": "2.3.1",
     "postcss": "8.4.39",
     "postcss-styled-syntax": "0.6.4",
+    "react-lottie": "^1.2.4",
     "storybook": "8.2.4",
     "stylelint": "16.6.1",
     "stylelint-config-clean-order": "6.1.0",
