--- a/frontend/package.json
+++ b/frontend/package.json
@@ -93,6 +93,7 @@
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.0.4",
+    "webpack-font-preload-plugin": "^1.5.0",
     "webpack-merge": "6.0.1"
   },
   "msw": {
