--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,6 +79,7 @@
     "msw": "2.3.1",
     "postcss": "8.4.39",
     "postcss-styled-syntax": "0.6.4",
+    "react-lottie": "^1.2.4",
     "storybook": "8.2.4",
     "stylelint": "16.6.1",
     "stylelint-config-clean-order": "6.1.0",
@@ -89,8 +90,10 @@
     "typescript": "5.5.3",
     "undici": "6.19.2",
     "webpack": "5.94.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.0.4",
+    "webpack-font-preload-plugin": "^1.5.0",
     "webpack-merge": "6.0.1"
   },
   "msw": {
