--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -2,7 +2,7 @@ name: Frontend CI
 
 on:
   pull_request:
-    branches: ['develop']
+    branches: ['main', 'develop']
 
 permissions:
   checks: write
