--- a/.github/workflows/backend-prod-cd.yml
+++ b/.github/workflows/backend-prod-cd.yml
@@ -83,7 +83,13 @@ jobs:
 
   be-depoly:
     needs: be-build
-    runs-on: [self-hosted, linux, ARM64, prod]
+    strategy:
+      matrix:
+        # 매트릭스 전략으로 여러 runner를 사용할 수 있도록 설정
+        runner: [ prod-a, prod-b ]
+      # fail-fast 옵션을 명시적으로 설정
+      fail-fast: true
+    runs-on: [self-hosted, linux, ARM64, ${{ matrix.runner }}]
     defaults:
       run:
         shell: bash
